# Gym

./: .gitignore  ATTRIBUTIONS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: _build_container.yml  claude-review.yml  code-linting.yml  full-test-suite.yml  unit-tests.yml
benchmarks/aalcr/: README.md  config.yaml  prepare.py
benchmarks/browsecomp/: config.yaml  prepare.py
benchmarks/frontierscience_research/: README.md  config.yaml  prepare.py
benchmarks/labbench2_vlm/: README.md  config.yaml  prepare.py
benchmarks/nemotron_3_ultra/: README.md  config_long.yaml  config_short.yaml
benchmarks/ruler/: README.md  config_nemotron_3_256k.yaml  prepare_nemotron_3_256k.py  prepare_utils.py
benchmarks/spider2_lite/: README.md  config.yaml  prepare.py
benchmarks/xstest/: README.md  config.yaml  prepare.py
data/: .gitignore
docs/: index.md
docs/data/: download-huggingface.md  index.md  prepare-validate.md  prompt-config.md
docs/environment-tutorials/: index.md
docs/get-started/: first-training-run.md
docs/infrastructure/: deployment-topology.md  index.md
docs/training-tutorials/: index.md
docs/tutorials/: creating-resource-server.md  index.md  offline-training-w-rollouts.md
environments/abstention/: README.md  config.yaml  prepare.py
environments/arc_agi/: README.md
environments/blackjack/: README.md  config.yaml  prepare.py
environments/circle_click/: README.md  config.yaml
environments/circle_count/: README.md  config.yaml
environments/ether0/: config.yaml
environments/gym_v/: README.md  config.yaml
environments/workplace_assistant/: README.md
fern/: README.md  docs.yml
fern/versions/: latest.yml  v0.3.0.yml  v0.4.0.yml
nemo_gym/: anthropic_converter.py  anthropic_utils.py  base_responses_api_model.py  benchmarks.py  cli.py  cli_setup_command.py  config_types.py  global_config.py  model_registry.py  openai_utils.py  package_info.py  registry.py  resources_server_registry.py  responses_converter.py  rollout_collection.py  server_utils.py
nemo_gym/cli/: agents.py  env.py  eval.py  main.py  models.py  resources_servers.py  utils.py
nemo_gym/sandbox/: __init__.py  api.py  utils.py
resources_servers/aalcr/: app.py
resources_servers/arc_agi/: README.md
resources_servers/arena/: README.md  app.py  arena.py  requirements.txt
resources_servers/browsecomp_advanced_harness/: app.py
resources_servers/cbrne_benchmark/: README.md  app.py
resources_servers/cobol_compiler/: .gitignore  README.md  app.py  cobol_utils.py  setup_cobc.py
resources_servers/code_gen/: app.py
resources_servers/coderabbit_pr_eval/: EVALUATION.md  README.md  app.py
resources_servers/dassault_tool_call_enterprise/: README.md  app.py  preprocess_to_gym.py
resources_servers/dassault_tool_call_multistep/: README.md  app.py  preprocess_to_gym.py
resources_servers/dassault_tool_call_scaled/: README.md  app.py  preprocess_to_gym.py
resources_servers/equivalence_rule/: app.py
resources_servers/example_session_state_mgmt/: app.py
resources_servers/example_tool_call_multireward/: app.py  (+1 more)
responses_api_models/local_vllm_model/: app.py  pyproject.toml
responses_api_models/local_vllm_model/tests/: test_app.py
scripts/: run_customer_evals.py
(+509 files in other folders)
